[gd_scene load_steps=6 format=2]

[ext_resource path="res://assets/ui/buttons/action_buttons/btn_assign_work1.png" type="Texture" id=1]
[ext_resource path="res://ui/buttons/WorkerActionsDialog.gd" type="Script" id=2]
[ext_resource path="res://assets/ui/buttons/action_buttons/btn_assign_work2.png" type="Texture" id=3]
[ext_resource path="res://assets/ui/buttons/action_buttons/btn_assign_work3.png" type="Texture" id=4]
[ext_resource path="res://assets/ui/buttons/action_buttons/btn_assign_work4.png" type="Texture" id=5]

[node name="Control" type="Control"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -512.0
margin_top = -200.0
margin_right = 512.0
margin_bottom = -150.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="."]
margin_right = 32.0
margin_bottom = 32.0
rect_scale = Vector2( 0.5, 0.5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CollectTree" type="TextureButton" parent="HBoxContainer"]
margin_right = 32.0
margin_bottom = 32.0
texture_normal = ExtResource( 1 )

[node name="CollectStone" type="TextureButton" parent="HBoxContainer"]
margin_left = 36.0
margin_right = 68.0
margin_bottom = 32.0
texture_normal = ExtResource( 4 )

[node name="CollectTill" type="TextureButton" parent="HBoxContainer"]
margin_left = 72.0
margin_right = 104.0
margin_bottom = 32.0
texture_normal = ExtResource( 5 )

[node name="Unassign" type="TextureButton" parent="HBoxContainer"]
margin_left = 108.0
margin_right = 140.0
margin_bottom = 32.0
texture_normal = ExtResource( 3 )

[connection signal="pressed" from="HBoxContainer/CollectTree" to="." method="_on_CollectTree_pressed"]
[connection signal="pressed" from="HBoxContainer/CollectStone" to="." method="_on_CollectStone_pressed"]
[connection signal="pressed" from="HBoxContainer/CollectTill" to="." method="_on_CollectTill_pressed"]
[connection signal="pressed" from="HBoxContainer/Unassign" to="." method="_on_Unassign_pressed"]
